--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 							<h3>My Arduino Projects</h3>
 							
 							<ul class="actions special">
+								<li><a href="https://docs.google.com/document/d/1-FcuYW7hqXDgVlZFKr8YC1H0QFL_Ubpc1U6h7yjSzUg/edit?tab=t.0" target="_blank" class="button">more</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
