--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<p>This is collection of projects that I am proud of and/or show my skills applications.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/Arduino_project_photo.png" alt="Arduino projects" /></span>
+							<span class="image fit"><img src="images/Arduino_project_photo.png" alt="Arduino projects" width="500" height="500" /></span>
 							<h3>My Arduino Projects</h3>
 							
 							<ul class="actions special">
@@ -84,7 +84,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/codestockimage.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/codestockimage.jpg" alt="" height="500" width="500" /></span>
 							<h3>My Code</h3>
 							<p></p>
 							<ul class="actions special">
